[tool.poetry]
name = "passwrd"
version = "0.1.0"
description = "Python tool to generate secure mnemonic passwords."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"
homepage = "https://github.com/samedamci/passwrd"
repository = "https://github.com/samedamci/passwrd"
keywords = []
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: ISC License (ISCL)",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Security",
    "Topic :: Utilities",
    "Typing :: Typed",
]
include = ["LICENSE"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
